# FilesHasher

./: CMakeLists.txt  build.bat.txt  build.sh.txt
src/: arguments.cpp  arguments.h  config.h  engine.cpp  engine.h  file_reader.cpp  file_reader.h  hash_calculator.cpp  hash_calculator.h  main.cpp  memory_buffer.cpp  memory_buffer.h  results_writer.cpp  results_writer.h  threadpool.cpp  threadpool.h  utils.cpp  utils.h
tests/: arguments_test.cc  hash_test.cc
